<resources>
    <string name="app_name">FFmpegAndroid</string>
    <string name="audio_transform">音频转码</string>
    <string name="audio_cut">音频剪切</string>
    <string name="audio_concat">音频拼接</string>
    <string name="audio_mix">音乐混音</string>
    <string name="audio_play">音频播放</string>
    <string name="audio_opensl">OpenSL播放</string>
    <string name="audio_waveform">波形图</string>
    <string name="audio_encode">PCM编码</string>
    <string name="audio_speed">音频速度</string>
    <string name="audio_echo">空灵效果</string>
    <string name="audio_tremolo">惊悚效果</string>
    <string name="audio_denoise">音频降噪</string>
    <string name="audio_silence">静音检测</string>
    <string name="audio_volume">修改音量</string>
    <string name="audio_reverb">混响</string>
    <string name="audio_fade">渐变声</string>
    <string name="audio_surround">全景声</string>
    <string name="audio_add_equalizer">均衡器+</string>
    <string name="audio_effect">音效</string>
    <string name="audio_equalizer">均衡器:</string>
    <string name="audio_style">风格:</string>
    <string name="audio_effect_reverb">混响:</string>
    <string name="audio_bass_boost">重低音:</string>
    <string name="audio_voice_enhancer">声音增强:</string>
    <string name="audio_effect_echo">空灵</string>
    <string name="audio_effect_funny">搞笑</string>
    <string name="audio_effect_tremolo">惊悚</string>
    <string name="audio_effect_lolita">萝莉</string>
    <string name="audio_effect_uncle">大叔</string>

    <string name="audio_handle">音频处理</string>
    <string name="media_handle">音视频处理</string>
    <string name="video_handle">视频处理</string>
    <string name="video_push">ffmpeg推流</string>
    <string name="video_live">rtmp推流直播</string>

    <string name="media_mux">音视频合成</string>
    <string name="media_extra_audio">提取音频</string>
    <string name="media_extract_video">提取视频</string>
    <string name="media_play">音视频播放</string>
    <string name="media_probe">probe多媒体信息</string>
    <string name="media_retrieve">retrieve多媒体信息</string>
    <string name="media_dubbing">配音</string>

    <string name="video_cut">视频剪切</string>
    <string name="video_concat">视频拼接</string>
    <string name="video_water_mark">视频水印</string>
    <string name="video_remove_logo">去除水印</string>
    <string name="video_to_gif">视频转Gif</string>
    <string name="video_transform">视频转码</string>
    <string name="video_screen_shot">视频截图</string>
    <string name="video_screen_record">屏幕录制</string>
    <string name="video_from_photo">合成视频</string>
    <string name="video_extract_frame">视频抽帧</string>
    <string name="video_part_zoom">视频局部放大</string>
    <string name="video_play">视频播放</string>
    <string name="video_filter">FFmpeg滤镜</string>
    <string name="camera_filter">Camera滤镜</string>
    <string name="video_slow">慢放</string>
    <string name="video_fast">快进</string>
    <string name="video_multi">画面拼接</string>
    <string name="video_reverse">视频倒播</string>
    <string name="video_denoise">视频降噪</string>
    <string name="video_image">视频转图片</string>
    <string name="video_pip">视频画中画</string>
    <string name="video_preview">播放预览</string>
    <string name="video_moov">MOOV前移</string>
    <string name="video_speed">播放倍率</string>
    <string name="video_thumbnail">插入封面</string>
    <string name="video_subtitle">添加字幕</string>
    <string name="video_zoom">图片缩放</string>
    <string name="video_gray">黑白视频</string>
    <string name="video_stereo3d">3D视频</string>

    <string name="swap">切换</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="mute">静音</string>
    <string name="sound">声音</string>
    <string name="sound_on">声音开</string>
    <string name="sound_off">声音关</string>

    <string name="video_sketch">素描</string>
    <string name="video_hue">hue</string>
    <string name="video_lut">lut</string>
    <string name="video_edge">边缘</string>
    <string name="video_blur">模糊</string>
    <string name="video_grid">九宫格</string>
    <string name="video_rotate">旋转</string>
    <string name="video_flip">翻转</string>
    <string name="video_box">矩形</string>
    <string name="video_flash">闪烁</string>
    <string name="video_balance">色彩平衡</string>
    <string name="video_sharp">锐化</string>

    <string name="select_file">选择文件</string>
    <string name="please_select">请选择或设置正确文件</string>
    <string name="file_not_found">文件不存在</string>
    <string name="please_click_select">请点击右上角菜单选择文件</string>
    <string name="wrong_audio_format">非音频文件</string>
    <string name="wrong_video_format">非视频文件</string>
    <string name="converting_video">正在反转视频&#8230;</string>
    <string name="tip_not_mp4_video">该视频不是mp4,无法进行moov前移操作</string>

    <string name="filter_sketch">素描</string>
    <string name="filter_luminance">亮度</string>
    <string name="filter_saturation">饱和度</string>
    <string name="filter_contrast">对比度</string>
    <string name="filter_edge">边缘</string>
    <string name="filter_division">九宫格</string>
    <string name="filter_equalize">均衡</string>
    <string name="filter_flip">镜像</string>
    <string name="filter_blur">模糊</string>
    <string name="filter_rotate">旋转</string>
    <string name="filter_sharpening">锐化</string>
    <string name="filter_vr">VR</string>
    <string name="filter_denoise">降噪</string>

    <string name="camera_filter_none">正常</string>
    <string name="camera_filter_hue">Hue</string>
    <string name="camera_filter_balance">白平衡</string>
    <string name="camera_filter_sketch">素描</string>
    <string name="camera_filter_blur">模糊</string>
    <string name="camera_filter_overlay">Overlay</string>
    <string name="camera_filter_circle">呼吸圆</string>
    <string name="camera_filter_brightness">亮度</string>
    <string name="camera_filter_saturation">饱和度</string>
    <string name="camera_filter_contrast">对比度</string>
    <string name="camera_filter_sharpen">锐化</string>

</resources>
