<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.frank.ffmpeg.activity.VideoHandleActivity">

    <ProgressBar
        android:id="@+id/progress_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_video_transform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_transform"/>

            <Button
                android:id="@+id/btn_video_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_cut"/>

            <Button
                android:id="@+id/btn_video_concat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_concat"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_screen_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_screen_shot"/>

            <Button
                android:id="@+id/btn_water_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_water_mark"/>

            <Button
                android:id="@+id/btn_generate_gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_to_gif"/>

            <Button
                android:id="@+id/btn_screen_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_screen_record"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_combine_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_from_photo"/>

            <Button
                android:id="@+id/btn_play_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_play"/>

            <Button
                android:id="@+id/btn_multi_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_multi"/>

            <Button
                android:id="@+id/btn_reverse_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_reverse"/>

            <Button
                android:id="@+id/btn_denoise_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_denoise"/>

            <Button
                android:id="@+id/btn_to_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/video_image"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
