<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.frank.ffmpeg.activity.LiveActivity">

    <SurfaceView
        android:id="@+id/surface_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_swap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap"
        android:layout_marginTop="20dp"/>

    <ToggleButton
        android:id="@+id/btn_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/stop"
        android:textOff="@string/start"
        android:layout_centerVertical="true"/>

    <ToggleButton
        android:id="@+id/btn_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/sound"
        android:textOff="@string/mute"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
