<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/audio_effect">
    </TextView>

    <RadioGroup
        android:id="@+id/group_audio_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_effect_echo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_effect_echo"/>

        <RadioButton
            android:id="@+id/btn_effect_funny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_effect_funny"
            android:layout_marginStart="5dp"/>

        <RadioButton
            android:id="@+id/btn_effect_tremolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_effect_tremolo"
            android:layout_marginStart="5dp"/>

        <RadioButton
            android:id="@+id/btn_effect_lolita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_effect_lolita"
            android:layout_marginStart="5dp"/>

        <RadioButton
            android:id="@+id/btn_effect_uncle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_effect_uncle"
            android:layout_marginStart="5dp"/>

    </RadioGroup>

    <com.frank.ffmpeg.view.VisualizerView
        android:id="@+id/visualizer_fft"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_equalizer">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_equalizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp">
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>