<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.AudioHandleActivity">

    <Button
        android:id="@+id/btn_transform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_transform"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_cut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_cut"
        android:layout_below="@+id/btn_transform"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_concat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_concat"
        android:layout_below="@+id/btn_cut"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_mix"
        android:layout_below="@+id/btn_concat"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
