<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_equalizer">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/equalizer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_style"/>

    <Spinner
        android:id="@+id/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_reverb"/>

    <Spinner
        android:id="@+id/spinner_reverb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_bass_boost"/>

    <SeekBar
        android:id="@+id/bar_bassboost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </SeekBar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audio_voice_enhancer"/>

    <SeekBar
        android:id="@+id/bar_enhancer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </SeekBar>

    <com.frank.ffmpeg.view.VisualizerView
        android:id="@+id/visualizer_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"/>

</LinearLayout>