<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.frank.ffmpeg.activity.MediaHandleActivity">

        <LinearLayout
            android:id="@+id/layout_media_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btn_mux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="@string/media_mux"/>

                <Button
                    android:id="@+id/btn_extract_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_extra_audio"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/btn_extract_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_extract_video"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/btn_dubbing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_dubbing"
                    android:layout_marginTop="10dp" />
        </LinearLayout>

        <include
            layout="@layout/item_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

</RelativeLayout>
